--- a/templates/base/package.json
+++ b/templates/base/package.json
@@ -1,6 +1,11 @@
 {
+  "version": "1.0.0",
+  "type": "module",
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
-    "@purista/core": "^1.12.0"
+    "@purista/core": "latest"
   },
   "devDependencies": {
     "@types/node": "latest",
